# QCTools

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Converter.hpp  FramesTracker.cpp  FramesTracker.hpp  HTML.cpp  HTML.hpp  InactivePixelsTracker.cpp  InactivePixelsTracker.hpp  Makefile  ProgressTracker.cpp  ProgressTracker.hpp  README.md  cmake_install.cmake  converter.cpp  duplicateFramesTracker.cpp  duplicateFramesTracker.hpp  main.cpp  report.html  template.html  template.js  template_no_js.html
.cmake/api/v1/reply/: cache-v2-4bd65d12357440d299a3.json  cmakeFiles-v1-37c1dcd2f7ad01b4037b.json  codemodel-v2-bd683658fbe6dc382032.json  index-2024-07-16T13-50-46-0711.json  target-qctool-8a56e2bb1f447eceb12c.json
